--- a/src/app/admin/course-management/add-course/add-course.component.css
+++ b/src/app/admin/course-management/add-course/add-course.component.css
@@ -1,5 +1,6 @@
 .content-background {
-    background-color: rgba(153, 253, 153, 0.9);
+    /* background-color: rgba(153, 253, 153, 0.9); */
+    background-color: rgba(236, 171, 48, 0.904);
     color: black;
     padding: 15px;
     margin: 15px;
