--- a/src/app/admin/course-management/add-course/add-course.component.html
+++ b/src/app/admin/course-management/add-course/add-course.component.html
@@ -26,13 +26,13 @@
                         <!-- <label class="text-danger" *ngIf="service.formModel.get('Email').touched && service.formModel.get('Email').errors?.required">This field is mandatory</label> -->
         
                     </div>
-                    <div class="form-group required">
+                    <div class="form-group">
                         <label>Teacher1 UserName</label>
                         <input class="form-control" formControlName="Teacher1UserName">
                         <!-- <label class="text-danger" *ngIf="service.formModel.get('MobileNumber').touched && service.formModel.get('MobileNumber').errors?.required">This field is mandatory</label> -->
                     </div>
         
-                    <div class="form-group required">
+                    <div class="form-group">
                         <label>Teacher2 UserName</label>
                         <input class="form-control" formControlName="Teacher2UserName">
                         <!-- <label class="text-danger" *ngIf="service.formModel.get('BSSEROLL').touched && service.formModel.get('BSSEROLL').errors?.required">This field is mandatory</label> -->
