--- a/src/app/admin/students-management/add-student/add-student.component.html
+++ b/src/app/admin/students-management/add-student/add-student.component.html
@@ -2,6 +2,7 @@
 
 <div class="row mt-1">
     <div class="col-md-12">
+        <h1 class="center"><b>CREATE NEW STUDENT ACCOUNT</b></h1>
         <form [formGroup]="service.formModel" autocomplete="off" (submit)="addStudentAccount()">
             <div class="form-group required">
                 <label>Student Name</label>
