--- a/src/app/admin/students-management/edit-student-info/edit-student-info.component.css
+++ b/src/app/admin/students-management/edit-student-info/edit-student-info.component.css
@@ -3,3 +3,7 @@ input.form-control,input.form-control:focus{
     color: darkgreen;
     border: 1px solid #636b7b;
 }
+
+.center{
+    text-align: center;
+}
