--- a/src/app/admin/teachers-management/add-teacher/add-teacher.component.html
+++ b/src/app/admin/teachers-management/add-teacher/add-teacher.component.html
@@ -2,6 +2,7 @@
 
 <div class="row mt-1">
     <div class="col-md-12">
+        <h1 class="center"><b>CREATE NEW TEACHER ACCOUNT</b></h1>
         <form [formGroup]="service.formModel" autocomplete="off" (submit)="addTeacherAccount()">
             <div class="form-group required">
                 <label>Teacher Name</label>
