--- a/src/app/course/attendance-report/attendance-report.component.html
+++ b/src/app/course/attendance-report/attendance-report.component.html
@@ -13,6 +13,8 @@
                     <mat-option value="All">All</mat-option>
                     <mat-option value="Daily">Daily</mat-option>
                     <mat-option value="Monthly">Monthly</mat-option>
+                    <mat-option value="Last 7 Days">Last 7 Days</mat-option>
+                    <mat-option value="Last 30 Days">Last 30 Days</mat-option>
                 </mat-select>
               </mat-form-field>
             
@@ -42,7 +44,6 @@
             <div class="col-sm-4 border">
                 Student Name
             </div>
-            
             <div class="col-sm-2 border">
                 Attendance
             </div>
