--- a/src/app/admin/course-management/edit-course-basic-info/edit-course-basic-info.component.html
+++ b/src/app/admin/course-management/edit-course-basic-info/edit-course-basic-info.component.html
@@ -7,9 +7,10 @@
                 <h1 class="center"><b>EDIT COURSE INFO</b></h1>
 
                 <form [formGroup]="service.formModel" autocomplete="off" (submit)="editCourseBasicInfo()">
-                    <div class="form-group required">
+                    <div class="form-group">
                         <label>Course ID</label>
-                        <input class="form-control" formControlName="CourseId" [ngModel]="course.courseId" disabled>
+                        <input [readonly]=true style="background-color: aqua;"  class="form-control" formControlName="CourseId" [ngModel]="course.courseId">
+                        <!-- disabled -->
                         <!-- <label class="text-danger" *ngIf="service.formModel.get('StudentName').touched && service.formModel.get('StudentName').errors?.required">This field is mandatory</label> -->
                     </div>
                     <div class="form-group required">
@@ -18,20 +19,21 @@
                         <!-- <label class="text-danger" *ngIf="service.formModel.get('BSSEROLL').touched && service.formModel.get('BSSEROLL').errors?.required">This field is mandatory</label> -->
                     </div>
                     
-                    <div class="form-group required">
+                    <div class="form-group">
                         <label>Batch No</label>
-                        <input class="form-control" formControlName="BatchNo" [ngModel]="course.batchNo" disabled>
+                        <input [readonly]=true style="background-color: aqua;" class="form-control" formControlName="BatchNo" [ngModel]="course.batchNo">
+                        <!-- disabled -->
                         <!-- <label class="text-danger" *ngIf="service.formModel.get('Email').touched && service.formModel.get('Email').errors?.email">Invalid Email Address</label> -->
                         <!-- <label class="text-danger" *ngIf="service.formModel.get('Email').touched && service.formModel.get('Email').errors?.required">This field is mandatory</label> -->
         
                     </div>
-                    <div class="form-group required">
+                    <div class="form-group">
                         <label>Teacher1 UserName</label>
                         <input class="form-control" formControlName="Teacher1UserName" [ngModel]="course.teacher1UserName">
                         <!-- <label class="text-danger" *ngIf="service.formModel.get('MobileNumber').touched && service.formModel.get('MobileNumber').errors?.required">This field is mandatory</label> -->
                     </div>
         
-                    <div class="form-group required">
+                    <div class="form-group">
                         <label>Teacher2 UserName</label>
                         <input class="form-control" formControlName="Teacher2UserName" [ngModel]="course.teacher2UserName">
                         <!-- <label class="text-danger" *ngIf="service.formModel.get('BSSEROLL').touched && service.formModel.get('BSSEROLL').errors?.required">This field is mandatory</label> -->
