--- a/src/app/admin/students-management/students-management.component.css
+++ b/src/app/admin/students-management/students-management.component.css
@@ -11,9 +11,14 @@
 }
 
 .option-style{
+    /* overflow: auto; */
+    white-space: pre-wrap;
     font-family: sans-serif;
-    padding: 15px 10px 10px 10px;
     margin-top: 10px;
+    padding: 5px;
+    font-weight: 700;
+    width: 100%;
+    color: navy;
     border-bottom: 1px solid rgb(138, 133, 133);
     background-color: rgb(200, 255, 200);
 }
