--- a/src/app/admin/teachers-management/teachers-management.component.css
+++ b/src/app/admin/teachers-management/teachers-management.component.css
@@ -11,8 +11,13 @@
 }
 
 .option-style{
+    /* overflow: auto; */
+    white-space: pre-wrap;
     font-family: sans-serif;
-    padding: 15px 10px 10px 10px;
+    padding: 5px;
+    color: navy;
+    width: 100%;
+    font-weight: 700;
     margin-top: 10px;
     border-bottom: 1px solid rgb(138, 133, 133);
     background-color: rgb(200, 255, 200);
