--- a/src/app/admin/teachers-management/teachers-management.component.html
+++ b/src/app/admin/teachers-management/teachers-management.component.html
@@ -1,7 +1,7 @@
 <div class="row content-background"> 
     <div class="col-sm-2 sidebar">
-        <div routerLink='/admin/teachers-management/view-list' routerLinkActive='active' class="option-style"> View All Teacher </div>
-        <div routerLink='/admin/teachers-management/add' routerLinkActive='active' class="option-style"> Add New Account</div> 
+        <button mat-raised-button routerLink='/admin/teachers-management/view-list' routerLinkActive='active' class="option-style"> View All Teacher </button>
+        <button mat-raised-button routerLink='/admin/teachers-management/add' routerLinkActive='active' class="option-style"> Add New Account</button> 
     </div>
     <div class="col-sm-10">
         <router-outlet></router-outlet>
