--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,33 +1,10 @@
 <app-top-bar></app-top-bar>
 
-<div class="fixed-position">
-    <!-- <div class="topPartBackground">
-        <div class="row h-100 d-flex align-items-center justify-content-center">
-            <div class="col-sm-8 font-medium font-white">
-                <img src="/assets/images/logo.png" height="50">
-                WELCOME TO "বাঁশবাগান"
-            </div>
-            <div class="col-sm-1 offset-md-1">
-                <button class="mx-auto d-block">Student Account</button>
-            </div>
-
-            <div class="col-sm-1">
-                <button class="mx-auto d-block">Admin</button>
-            </div>
-            <div class="col-sm-1">
-                "Hello"
-            </div>
-            
-        </div>
-    </div> -->
-    
+<div>
     <div class="middlePartBackGround">
         <router-outlet></router-outlet>
     </div>
     
-    <div class="col-md-16">
-        
-    </div>
 </div>
 
 <app-bottom-bar></app-bottom-bar>
