--- a/src/app/student-login/login-module/login-module.component.html
+++ b/src/app/student-login/login-module/login-module.component.html
@@ -4,7 +4,7 @@
 </div>
 <form [formGroup]="service.formModel" #form="ngForm" class="mb-4" autocomplete="off" (submit)="signIn()">
     <div class="form-group">
-        <label>Email</label>
+        <label>Email / BSSE ROll</label>
         <input class="form-control" formControlName="Email">
     </div>
     <div class="form-group">
