--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -6,10 +6,16 @@
 
     <div class="spacer"></div>
 
-    <a mat-button routerLink="welcome-page" *ngIf="notLoggedIn">Home</a>
-    <a mat-button routerLink="student-login/loginModule" *ngIf="notLoggedIn">Student Account</a>
-    <a mat-button routerLink="admin-login/loginModule" *ngIf="notLoggedIn">Teacher Account</a>
-    <a mat-button *ngIf="loggedIn"><mat-icon>account_circle</mat-icon>{{userName}}</a>
-    <a mat-raised-button color="accent" routerLink="welcome-page" *ngIf="notLoggedIn">More</a>
-    <a mat-raised-button color="gray" *ngIf="loggedIn" (click)="sign_out()">Sign Out</a>
+    <a class="margin" mat-button routerLink="welcome-page" *ngIf="notLoggedIn">Home</a>
+    <a class="margin" mat-button routerLink="student-login/loginModule" *ngIf="notLoggedIn">Student Account</a>
+    <a class="margin" mat-button routerLink="admin-login/loginModule" *ngIf="notLoggedIn">Teacher Account</a>
+    <a class="margin" mat-button *ngIf="loggedIn" routerLink="my-profile"><mat-icon>account_circle</mat-icon>{{userName}}</a>
+    <a class="margin" mat-raised-button color="accent" routerLink="welcome-page" *ngIf="notLoggedIn">More</a>
+    <a class="margin" mat-raised-button color="gray" *ngIf="loggedIn" (click)="sign_out()">Sign Out</a>
 </mat-toolbar>
+
+<!-- <ng-sidebar-container>
+    <ng-sidebar [(opened)]="_opened">
+      <p>Sidebar contents</p>
+    </ng-sidebar>
+</ng-sidebar-container> -->
