--- a/src/app/welcome-page/welcome-page.component.css
+++ b/src/app/welcome-page/welcome-page.component.css
@@ -1,15 +1,14 @@
 .welcome-font{
-    font-size: 56px;
+    font-size: 48px;
     color: white;
     background: seagreen ;
-    width: 90%;
+    width: auto;
     padding: 20px;
-    max-width: 700px ;
     text-align: center ;
 }
 
 .wrapper{
-    display: flex;
+    position: flex;
     align-items: center;
     flex-direction: column;
     justify-content: center;
